<resources>
    <string name="app_name">ssadadream</string>
    <string name="add_pagename">사다드림 등록</string>
    <string name="add_classy">분류</string>
    <string name="add_store">가는곳</string>
    <string name="add_input_store">가게 이름</string>
    <string name="add_deadtime">주문받을시간</string>
    <string name="add_input_deadtime">12 : 00</string>
    <string name="add_meetspot">만날 장소</string>
    <string name="add_arrtime">도착예정시간</string>
    <string name="add_input_arrtime">13 : 30</string>
    <string name="add_arrtime_guide">대략적으로 예측하여 입력해주세요. \n구매 완료시 사용자들에게 알림을 보낼 수 있기 때문에 참여자가 자신의 일정을 확인하고 참여하는데 도움이 될 수 있습니다.</string>
    <string name="add_btntext">등록하기!</string>
    <string name="ordernow_name">주문현황</string>
    <string name="ordernow_others">주문진행상태</string>
    <string name="ordernow_mine">신청현황</string>
    <string name="ordernow_tab_others">내가 등록한 주문의 참여 현황</string>
    <string name="ordernow_tab_mine">내가 참여한 주문 현황</string>
    <string name="addpopup_title">팝업테스트</string>
    <string name="addpopup_content">팝업테스트 부제목</string>
    <string name="title_home">메인화면</string>
    <string name="title_myorder">주문현황</string>
    <string name="title_pay">결제하기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_qrcode">상품 전달 전 QR코드를\n수령자에게 보여주세요!</string>
    <string name="txt_pay">결제하기</string>

    <string name="showing_code_in_fragment">Showing code in fragment</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="name">Name</string>
    <string name="empty">---</string>
    <string name="site_name">Site Name</string>
    <string name="scan_a_code">Scan a QR Code</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>


</resources>
